internal/iptables/testdata/oci-ip6tables-save.txt
# Generated by ip6tables-save v1.8.10 (nf_tables) on Thu Sep 24 12:00:00 2026
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [16:1136]
:POSTROUTING ACCEPT [0:0]
[0:0] -A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -m connmark ! --mark 0x0/0xff0000 -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
[0:0] -A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
# Completed on Thu Sep 24 12:00:00 2026
# Generated by ip6tables-save v1.8.10 (nf_tables) on Thu Sep 24 12:00:00 2026
*filter
:INPUT ACCEPT [2:140]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [53:3668]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
[0:0] -A INPUT -j ts-input
[0:0] -A FORWARD -j ts-forward
[0:0] -A FORWARD -j DOCKER-USER
[0:0] -A FORWARD -j DOCKER-FORWARD
[0:0] -A DOCKER-FORWARD -j DOCKER-CT
[0:0] -A DOCKER-FORWARD -j DOCKER-INTERNAL
[0:0] -A DOCKER-FORWARD -j DOCKER-BRIDGE
[0:0] -A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
[0:0] -A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
[0:0] -A ts-forward -o tailscale0 -j ACCEPT
[0:0] -A ts-input -s 2001:db8::1/128 -i lo -j ACCEPT
[0:0] -A ts-input -i tailscale0 -j ACCEPT
[0:0] -A ts-input -p udp -m udp --dport 41641 -j ACCEPT
COMMIT
# Completed on Thu Sep 24 12:00:00 2026
# Generated by ip6tables-save v1.8.10 (nf_tables) on Thu Sep 24 12:00:00 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
:ts-postrouting - [0:0]
[0:0] -A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
[0:0] -A OUTPUT ! -d ::1/128 -m addrtype --dst-type LOCAL -j DOCKER
[0:0] -A POSTROUTING -j ts-postrouting
[0:0] -A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Thu Sep 24 12:00:00 2026
