internal/iptables/testdata/oci-iptables-save.txt
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Sep 24 12:00:00 2026
*mangle
:PREROUTING ACCEPT [109751:72223523]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [95209:29212494]
:POSTROUTING ACCEPT [0:0]
[7309:2266732] -A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -m connmark ! --mark 0x0/0xff0000 -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
[7171:736029] -A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
# Completed on Thu Sep 24 12:00:00 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Sep 24 12:00:00 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [138525:54651276]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:InstanceServices - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
[53317:20075776] -A INPUT -j ts-input
[77180:99053104] -A INPUT -p tcp -m tcp --dport 54203 -j ACCEPT
[29:1740] -A INPUT -p udp -m udp --dport 41641 -j ACCEPT
[669:38548] -A INPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW -j ACCEPT
[109109:328350994] -A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
[0:0] -A INPUT -p icmp -j ACCEPT
[2814:269272] -A INPUT -i lo -j ACCEPT
[0:0] -A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
[16:762] -A INPUT -j REJECT --reject-with icmp-host-prohibited
[9202:782714] -A FORWARD -j ts-forward
[0:0] -A FORWARD -j DOCKER-USER
[0:0] -A FORWARD -j DOCKER-FORWARD
[0:0] -A FORWARD -j REJECT --reject-with icmp-host-prohibited
[52185:3838062] -A OUTPUT -d 169.254.0.0/16 -j InstanceServices
[0:0] -A DOCKER ! -i docker0 -o docker0 -j DROP
[0:0] -A DOCKER-BRIDGE -o docker0 -j DOCKER
[0:0] -A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
[0:0] -A DOCKER-FORWARD -j DOCKER-CT
[0:0] -A DOCKER-FORWARD -j DOCKER-INTERNAL
[0:0] -A DOCKER-FORWARD -j DOCKER-BRIDGE
[0:0] -A DOCKER-FORWARD -i docker0 -j ACCEPT
[0:0] -A InstanceServices -d 169.254.0.2/32 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[0:0] -A InstanceServices -d 169.254.2.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[0:0] -A InstanceServices -d 169.254.4.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[0:0] -A InstanceServices -d 169.254.5.0/24 -p tcp -m owner --uid-owner 0 -m tcp --dport 3260 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[0:0] -A InstanceServices -d 169.254.0.2/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[2492:225604] -A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 53 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[0:0] -A InstanceServices -d 169.254.169.254/32 -p tcp -m tcp --dport 53 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[0:0] -A InstanceServices -d 169.254.0.3/32 -p tcp -m owner --uid-owner 0 -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[0:0] -A InstanceServices -d 169.254.0.4/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[49668:3610558] -A InstanceServices -d 169.254.169.254/32 -p tcp -m tcp --dport 80 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[0:0] -A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 67 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[0:0] -A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 69 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[25:1900] -A InstanceServices -d 169.254.169.254/32 -p udp -m udp --dport 123 -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j ACCEPT
[0:0] -A InstanceServices -d 169.254.0.0/16 -p tcp -m tcp -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j REJECT --reject-with tcp-reset
[0:0] -A InstanceServices -d 169.254.0.0/16 -p udp -m udp -m comment --comment "See the Oracle-Provided Images section in the Oracle Cloud Infrastructure documentation for security impact of modifying or removing this rule" -j REJECT --reject-with icmp-port-unreachable
[9185:779741] -A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
[9185:779741] -A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
[0:0] -A ts-forward -s 198.51.100.0/24 -o tailscale0 -j DROP
[17:2973] -A ts-forward -o tailscale0 -j ACCEPT
[0:0] -A ts-input -s 198.51.100.1/32 -i lo -j ACCEPT
[735:182296] -A ts-input -i tailscale0 -j ACCEPT
[18510:2570966] -A ts-input -p udp -m udp --dport 41641 -j ACCEPT
[0:0] -A ts-input -s 198.51.100.128/25 ! -i tailscale0 -j RETURN
[0:0] -A ts-input -s 198.51.100.0/24 ! -i tailscale0 -j DROP
COMMIT
# Completed on Thu Sep 24 12:00:00 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Sep 24 12:00:00 2026
*nat
:PREROUTING ACCEPT [985:67510]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [18321:1569108]
:POSTROUTING ACCEPT [18164:1545244]
:DOCKER - [0:0]
:ts-postrouting - [0:0]
[968:56580] -A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
[157:23864] -A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
[8769:856232] -A POSTROUTING -j ts-postrouting
[157:23864] -A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
[12:8112] -A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Thu Sep 24 12:00:00 2026
